# ai-reqs

./: .gitignore  LICENCE  README.md  pyproject.toml
ai_reqs_generator/: main.py  standard_libraries.py
reqvenv/Scripts/: activate  activate.bat
